# Snake

./: .gitignore  .gitmodules  CMakeLists.txt
include/: structures.hpp
src/: main.cpp  structures_impl.cpp
